createnet: Fix a broken icon

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -305,7 +305,7 @@
                                 <child>
                                   <widget class="GtkImage" id="image78">
                                     <property name="visible">True</property>
-                                    <property name="icon_name">gtk-info</property>
+                                    <property name="stock">gtk-dialog-info</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
