--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2694,7 +2694,6 @@ I/O:</property>
                                     <child>
                                       <widget class="GtkVBox" id="vbox13">
                                         <property name="visible">True</property>
-                                        <property name="orientation">vertical</property>
                                         <property name="spacing">12</property>
                                         <child>
                                           <widget class="GtkTable" id="table32">
@@ -2887,7 +2886,7 @@ I/O:</property>
                                             <child>
                                               <widget class="GtkTable" id="table11">
                                                 <property name="visible">True</property>
-                                                <property name="n_rows">2</property>
+                                                <property name="n_rows">3</property>
                                                 <property name="n_columns">2</property>
                                                 <property name="column_spacing">8</property>
                                                 <property name="row_spacing">3</property>
@@ -2979,12 +2978,64 @@ I/O:</property>
                                                     <property name="x_options">GTK_FILL</property>
                                                   </packing>
                                                 </child>
+                                                <child>
+                                                  <widget class="GtkLabel" id="label32">
+                                                    <property name="visible">True</property>
+                                                    <property name="xalign">1</property>
+                                                    <property name="label" translatable="yes">Disk B_us:</property>
+                                                    <property name="use_underline">True</property>
+                                                    <property name="mnemonic_widget">disk-bus-combo</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="top_attach">2</property>
+                                                    <property name="bottom_attach">3</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkHBox" id="hbox18">
+                                                    <property name="visible">True</property>
+                                                    <child>
+                                                      <widget class="GtkComboBox" id="disk-bus-combo">
+                                                        <property name="visible">True</property>
+                                                        <signal name="changed" handler="on_disk_bus_combo_changed"/>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkAlignment" id="alignment27">
+                                                        <property name="visible">True</property>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="disk-bus-label">
+                                                            <property name="visible">True</property>
+                                                            <property name="xalign">0</property>
+                                                            <property name="label">Unknown bus</property>
+                                                          </widget>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
+                                                    <property name="top_attach">2</property>
+                                                    <property name="bottom_attach">3</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                             </child>
                                             <child>
                                               <widget class="GtkLabel" id="label31">
                                                 <property name="visible">True</property>
-                                                <property name="label" translatable="yes">Advanced options</property>
+                                                <property name="label" translatable="yes">Advanced _options</property>
+                                                <property name="use_underline">True</property>
+                                                <property name="mnemonic_widget">expander4</property>
                                               </widget>
                                               <packing>
                                                 <property name="type">label_item</property>
