addhardware: Make disk intro less wordy

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -106,7 +106,7 @@
                               <widget class="GtkLabel" id="label217">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Please indicate how you'd like to assign space on this physical host system for your new virtual storage device.</property>
+                                <property name="label" translatable="yes">Please indicate how you would like to assign space on the host system for your virtual storage device.</property>
                                 <property name="use_markup">True</property>
                                 <property name="wrap">True</property>
                               </widget>
