addhardware: Show host devices in a list, not a combo
Some of the listings can be pretty large, so a list is better suited for
browsing and resizing.

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -1312,22 +1312,10 @@ to connect to the virtual machine.</property>
                                     <child>
                                       <widget class="GtkTable" id="table3">
                                         <property name="visible">True</property>
-                                        <property name="n_rows">2</property>
+                                        <property name="n_rows">3</property>
                                         <property name="n_columns">2</property>
                                         <property name="column_spacing">12</property>
                                         <property name="row_spacing">6</property>
-                                        <child>
-                                          <widget class="GtkComboBox" id="host-device">
-                                            <property name="visible">True</property>
-                                          </widget>
-                                          <packing>
-                                            <property name="left_attach">1</property>
-                                            <property name="right_attach">2</property>
-                                            <property name="top_attach">1</property>
-                                            <property name="bottom_attach">2</property>
-                                            <property name="x_options">GTK_FILL</property>
-                                          </packing>
-                                        </child>
                                         <child>
                                           <widget class="GtkComboBox" id="host-device-type">
                                             <property name="visible">True</property>
@@ -1337,6 +1325,7 @@ to connect to the virtual machine.</property>
                                             <property name="left_attach">1</property>
                                             <property name="right_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
                                           </packing>
                                         </child>
                                         <child>
@@ -1345,12 +1334,12 @@ to connect to the virtual machine.</property>
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">_Device:</property>
                                             <property name="use_underline">True</property>
-                                            <property name="mnemonic_widget">host-device</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">1</property>
                                             <property name="bottom_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
                                           </packing>
                                         </child>
                                         <child>
@@ -1363,13 +1352,49 @@ to connect to the virtual machine.</property>
                                           </widget>
                                           <packing>
                                             <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkScrolledWindow" id="scrolledwindow2">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="hscrollbar_policy">automatic</property>
+                                            <property name="vscrollbar_policy">automatic</property>
+                                            <property name="shadow_type">etched-in</property>
+                                            <child>
+                                              <widget class="GtkTreeView" id="host-device">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="headers_visible">False</property>
+                                              </widget>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="right_attach">2</property>
+                                            <property name="top_attach">2</property>
+                                            <property name="bottom_attach">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkAlignment" id="alignment11">
+                                            <property name="visible">True</property>
+                                            <child>
+                                              <placeholder/>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="left_attach">1</property>
+                                            <property name="right_attach">2</property>
+                                            <property name="top_attach">1</property>
+                                            <property name="bottom_attach">2</property>
+                                            <property name="y_options">GTK_FILL</property>
                                           </packing>
                                         </child>
                                       </widget>
                                     </child>
                                   </widget>
                                   <packing>
-                                    <property name="expand">False</property>
                                     <property name="position">1</property>
                                   </packing>
                                 </child>
