--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2530,108 +2530,131 @@ I/O:</property>
                                         <property name="label_xalign">0</property>
                                         <property name="shadow_type">none</property>
                                         <child>
-                                          <widget class="GtkAlignment" id="alignment1">
+                                          <widget class="GtkAlignment" id="bootalign">
                                             <property name="visible">True</property>
                                             <property name="top_padding">3</property>
                                             <property name="left_padding">12</property>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox10">
+                                              <widget class="GtkVBox" id="bootvbox">
                                                 <property name="visible">True</property>
                                                 <property name="spacing">6</property>
                                                 <child>
-                                                  <widget class="GtkTable" id="table2">
+                                                  <widget class="GtkCheckButton" id="boot-menu">
+                                                    <property name="label" translatable="yes">Enable boot me_nu</property>
                                                     <property name="visible">True</property>
-                                                    <property name="n_rows">3</property>
-                                                    <property name="n_columns">2</property>
-                                                    <property name="column_spacing">6</property>
-                                                    <property name="row_spacing">6</property>
-                                                    <child>
-                                                      <widget class="GtkScrolledWindow" id="scrolledwindow3">
-                                                        <property name="width_request">20</property>
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="hscrollbar_policy">never</property>
-                                                        <property name="vscrollbar_policy">never</property>
-                                                        <property name="shadow_type">in</property>
-                                                        <child>
-                                                          <widget class="GtkTreeView" id="config-boot-list">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="headers_visible">False</property>
-                                                          </widget>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="bottom_attach">3</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkButton" id="config-boot-moveup">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <signal name="clicked" handler="on_config_boot_moveup_clicked"/>
-                                                        <child>
-                                                          <widget class="GtkImage" id="image7">
-                                                            <property name="visible">True</property>
-                                                            <property name="stock">gtk-go-up</property>
-                                                          </widget>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="left_attach">1</property>
-                                                        <property name="right_attach">2</property>
-                                                        <property name="x_options">GTK_FILL</property>
-                                                        <property name="y_options">GTK_FILL</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkButton" id="config-boot-movedown">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">True</property>
-                                                        <property name="receives_default">True</property>
-                                                        <signal name="clicked" handler="on_config_boot_movedown_clicked"/>
-                                                        <child>
-                                                          <widget class="GtkImage" id="image8">
-                                                            <property name="visible">True</property>
-                                                            <property name="stock">gtk-go-down</property>
-                                                          </widget>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="left_attach">1</property>
-                                                        <property name="right_attach">2</property>
-                                                        <property name="top_attach">1</property>
-                                                        <property name="bottom_attach">2</property>
-                                                        <property name="x_options">GTK_FILL</property>
-                                                        <property name="y_options">GTK_FILL</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkAlignment" id="alignment21">
-                                                        <property name="visible">True</property>
-                                                        <child>
-                                                          <placeholder/>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="left_attach">1</property>
-                                                        <property name="right_attach">2</property>
-                                                        <property name="top_attach">2</property>
-                                                        <property name="bottom_attach">3</property>
-                                                        <property name="x_options">GTK_FILL</property>
-                                                      </packing>
-                                                    </child>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">False</property>
+                                                    <property name="use_underline">True</property>
+                                                    <property name="draw_indicator">True</property>
+                                                    <signal name="toggled" handler="on_boot_menu_changed"/>
                                                   </widget>
                                                   <packing>
                                                     <property name="position">0</property>
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <widget class="GtkAlignment" id="alignment20">
+                                                  <widget class="GtkHBox" id="boothbox">
                                                     <property name="visible">True</property>
+                                                    <property name="spacing">6</property>
                                                     <child>
-                                                      <placeholder/>
+                                                      <widget class="GtkTable" id="table2">
+                                                        <property name="visible">True</property>
+                                                        <property name="n_rows">3</property>
+                                                        <property name="n_columns">2</property>
+                                                        <property name="column_spacing">6</property>
+                                                        <property name="row_spacing">6</property>
+                                                        <child>
+                                                          <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                                                            <property name="width_request">20</property>
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="hscrollbar_policy">never</property>
+                                                            <property name="vscrollbar_policy">never</property>
+                                                            <property name="shadow_type">in</property>
+                                                            <child>
+                                                            <widget class="GtkTreeView" id="config-boot-list">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="headers_visible">False</property>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="bottom_attach">3</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkButton" id="config-boot-moveup">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">True</property>
+                                                            <signal name="clicked" handler="on_config_boot_moveup_clicked"/>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image7">
+                                                            <property name="visible">True</property>
+                                                            <property name="stock">gtk-go-up</property>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                            <property name="y_options">GTK_FILL</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkButton" id="config-boot-movedown">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">True</property>
+                                                            <signal name="clicked" handler="on_config_boot_movedown_clicked"/>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image8">
+                                                            <property name="visible">True</property>
+                                                            <property name="stock">gtk-go-down</property>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            <property name="top_attach">1</property>
+                                                            <property name="bottom_attach">2</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                            <property name="y_options">GTK_FILL</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkAlignment" id="alignment21">
+                                                            <property name="visible">True</property>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            <property name="top_attach">2</property>
+                                                            <property name="bottom_attach">3</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkAlignment" id="alignment1">
+                                                        <property name="visible">True</property>
+                                                        <child>
+                                                          <placeholder/>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="position">1</property>
+                                                      </packing>
                                                     </child>
                                                   </widget>
                                                   <packing>
