--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1622,7 +1622,7 @@
                             <child>
                               <widget class="GtkLabel" id="label10">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Over</property>
+                                <property name="label" translatable="yes">over</property>
                               </widget>
                               <packing>
                                 <property name="tab_fill">False</property>
@@ -1811,7 +1811,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label7">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Stats</property>
+                                <property name="label" translatable="yes">stat</property>
                               </widget>
                               <packing>
                                 <property name="position">1</property>
@@ -2243,7 +2243,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label53">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Proc</property>
+                                <property name="label" translatable="yes">cpu</property>
                               </widget>
                               <packing>
                                 <property name="position">2</property>
@@ -2469,7 +2469,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label54">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Mem</property>
+                                <property name="label" translatable="yes">mem</property>
                               </widget>
                               <packing>
                                 <property name="position">3</property>
@@ -2847,7 +2847,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="boot-options-lbl">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Boot</property>
+                                <property name="label" translatable="yes">boot</property>
                               </widget>
                               <packing>
                                 <property name="position">4</property>
@@ -3312,7 +3312,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label55">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Disk</property>
+                                <property name="label" translatable="yes">dsk</property>
                               </widget>
                               <packing>
                                 <property name="position">5</property>
@@ -3473,7 +3473,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label56">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Net</property>
+                                <property name="label" translatable="yes">net</property>
                               </widget>
                               <packing>
                                 <property name="position">6</property>
@@ -3632,7 +3632,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label401">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Input</property>
+                                <property name="label" translatable="yes">inp</property>
                               </widget>
                               <packing>
                                 <property name="position">7</property>
@@ -3965,7 +3965,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label500">
                                 <property name="visible">True</property>
-                                <property name="label">Gfx</property>
+                                <property name="label">gfx</property>
                               </widget>
                               <packing>
                                 <property name="position">8</property>
@@ -4065,7 +4065,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label440">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Sound</property>
+                                <property name="label" translatable="yes">snd</property>
                               </widget>
                               <packing>
                                 <property name="position">9</property>
@@ -4175,7 +4175,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label501">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Char</property>
+                                <property name="label" translatable="yes">chr</property>
                               </widget>
                               <packing>
                                 <property name="position">10</property>
@@ -4254,7 +4254,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label6">
                                 <property name="visible">True</property>
-                                <property name="label">Host</property>
+                                <property name="label">phy</property>
                               </widget>
                               <packing>
                                 <property name="position">11</property>
@@ -4411,7 +4411,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label15">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Vid</property>
+                                <property name="label" translatable="yes">vid</property>
                               </widget>
                               <packing>
                                 <property name="position">12</property>
@@ -4564,6 +4564,74 @@ I/O:</property>
                               </widget>
                               <packing>
                                 <property name="position">13</property>
+                                <property name="tab_fill">False</property>
+                                <property name="type">tab</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkFrame" id="frame12">
+                                <property name="visible">True</property>
+                                <property name="label_xalign">0</property>
+                                <property name="shadow_type">none</property>
+                                <child>
+                                  <widget class="GtkAlignment" id="alignment30">
+                                    <property name="visible">True</property>
+                                    <property name="top_padding">3</property>
+                                    <property name="left_padding">12</property>
+                                    <child>
+                                      <widget class="GtkTable" id="table14">
+                                        <property name="visible">True</property>
+                                        <property name="n_columns">2</property>
+                                        <property name="column_spacing">6</property>
+                                        <property name="row_spacing">6</property>
+                                        <child>
+                                          <widget class="GtkLabel" id="label48">
+                                            <property name="visible">True</property>
+                                            <property name="label" translatable="yes">Type:</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkLabel" id="controller-type">
+                                            <property name="visible">True</property>
+                                            <property name="label">foo</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="left_attach">1</property>
+                                            <property name="right_attach">2</property>
+                                            <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                      </widget>
+                                    </child>
+                                  </widget>
+                                </child>
+                                <child>
+                                  <widget class="GtkLabel" id="label42">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Controller&lt;/b&gt;</property>
+                                    <property name="use_markup">True</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="type">label_item</property>
+                                  </packing>
+                                </child>
+                              </widget>
+                              <packing>
+                                <property name="position">14</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkLabel" id="label47">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">cntrl</property>
+                              </widget>
+                              <packing>
+                                <property name="position">14</property>
                                 <property name="tab_fill">False</property>
                                 <property name="type">tab</property>
                               </packing>
